--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,12 @@
 
         // Launch Debug
         {
-            "name": "(vs) Launch (Debug)",
+            "name": "Zig Build (debug) -> Debug",
             "type": "cppvsdbg",
             "request": "launch",
             "preLaunchTask": "Build (Debug)",
             "cwd": "${workspaceFolder}\\zig-out",
-            "program": "${workspaceFolder}\\zig-out\\Debug\\x86_64-windows\\bin\\${workspaceFolderBasename}.exe",
+            "program": "${workspaceFolder}\\zig-out\\debug\\x86_64-windows\\bin\\${workspaceFolderBasename}.exe",
             "args": [],
             "environment": [],
             "stopAtEntry": false,
@@ -31,10 +31,10 @@
 
         // Launch Release
         {
-            "name": "(vs) Launch (Release)",
+            "name": "Zig Build (release) -> Debug",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceFolder}\\zig-out\\Release\\x86_64-windows\\bin\\${workspaceFolderBasename}.exe",
+            "program": "${workspaceFolder}\\zig-out\\release\\x86_64-windows\\bin\\${workspaceFolderBasename}.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}\\zig-out",
@@ -44,44 +44,6 @@
             "presentation": {
                 "hidden": false,
                 "group": "release",
-                "order": 1
-            },
-        },
-
-        // Current Debug
-        {
-            "name": "(vs) Launch Current (Debug)",
-            "type": "cppvsdbg",
-            "request": "launch",
-            "program": "${workspaceFolder}\\zig-out\\Debug\\miscellaneous\\x86_64-windows\\${relativeFileDirname}\\${fileBasenameNoExtension}.exe",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "console": "integratedTerminal",
-            "preLaunchTask": "Build Current (Debug)",
-            "presentation": {
-                "hidden": false,
-                "group": "miscellaneous",
-                "order": 1,
-            },
-        },
-
-        // Current Test
-        {
-            "name": "(vs) Launch Current (Test)",
-            "type": "cppvsdbg",
-            "request": "launch",
-            "program": "${workspaceFolder}\\zig-out\\tests\\x86_64-windows\\${relativeFileDirname}\\${fileBasenameNoExtension}.exe",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "console": "integratedTerminal",
-            "preLaunchTask": "Build Current (Test)",
-            "presentation": {
-                "hidden": false,
-                "group": "test",
                 "order": 1
             },
         },
